[package]
name = "akivili"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "socks"] }
fast-socks5 = "0.9.1"
log = "0.4.20"
env_logger = "0.10.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0.75"
async-trait = "0.1.74"
lazy_static = "1.4.0"